--- a/frontend/src/app/food/food.component.css
+++ b/frontend/src/app/food/food.component.css
@@ -19,7 +19,18 @@ mat-sidenav, mat-sidenav-content{
     width: 200px;   
 }
 
-.img{
-    width: 33%;
-    height: 33%;
+.content {
+    padding: 16px;
+}
+
+.content > mat-card {
+    width: 200px;
+}
+
+img{
+    height: 21rem;
+}
+
+#priceVal{
+    margin-left: 1rem;
 }
