Add feature of adding products to carts

--- a/frontend/src/app/food/food.component.html
+++ b/frontend/src/app/food/food.component.html
@@ -26,9 +26,10 @@
             </mat-card-content>
             <mat-card-actions>
                 <button mat-button>LIKE</button>
-                <button mat-button>ADD TO CART</button>
+                <button (click)="onCart(food)" mat-button>ADD TO CART</button>
             </mat-card-actions>
             </mat-card>
         </div>
     </div>
 </div>
+
