--- a/frontend/src/app/food/food.component.html
+++ b/frontend/src/app/food/food.component.html
@@ -1,15 +1,5 @@
 
-<mat-toolbar color="primary" class="navbar">
-    <div>Food Panda</div>
-    <div>
-        <span>Home</span>
-        <span>About</span>
-        <span>Services</span>
-        <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-            <mat-icon>shopping_cart</mat-icon>
-        </button>    
-    </div>
-</mat-toolbar>
+
 
 <div class="content">
     <div fxLayout="row wrap" fxLayoutGap="2rem grid">
@@ -18,7 +8,7 @@
             <mat-card-header>
                 <mat-card-title> {{food.name}}</mat-card-title>
             </mat-card-header>
-            <img mat-card-image src="{{ food.imageURL }}">
+            <img class="cart-img" mat-card-image src="{{ food.imageURL }}">
             <mat-card-content>
                 <p>
                    <strong>Price:</strong><span id="priceVal">{{ food.price }}</span>
