--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -1,11 +1,18 @@
 <mat-toolbar color="primary" class="navbar">
     <div>Food Panda</div>
     <div>
-        <span>Home</span>
-        <span>About</span>
-        <span>Services</span>
+
+        <button (click)="onHomeNavigator()"mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+            <mat-icon>home</mat-icon>
+        </button>
+        
         <button (click)="onCartNavigator()"mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
             <mat-icon>shopping_cart</mat-icon>
         </button>    
+
+        
+
+        <span>About</span>
+        <span>Services</span>
     </div>
 </mat-toolbar>
