--- a/frontend/src/app/cart/cart.component.html
+++ b/frontend/src/app/cart/cart.component.html
@@ -54,9 +54,9 @@
             
 
             
-            <div style="margin-top: 1rem;" fxLayout="row"><h3 >Subtotal:</h3><h2 class="costVal">{{ subtotal }}</h2></div>
-            <div fxLayout="row"><h3>Shipping:</h3> <h2  class="costVal">{{ shipping }}</h2></div>
-            <div fxLayout="row"><h3>Total (including Tax):</h3> <h2  class="costVal">{{ total }}</h2></div>
+            <div style="margin-top: 1rem;" fxLayout="row"><h3 >Subtotal:</h3><h2 class="costVal">{{payment.subtotal}}</h2></div>
+            <div fxLayout="row"><h3>Shipping:</h3> <h2  class="costVal">{{payment.shipping}}</h2></div>
+            <div fxLayout="row"><h3>Total (including Tax):</h3> <h2  class="costVal">{{payment.total}}</h2></div>
             <mat-divider></mat-divider>
             <button style="margin-left: 11rem;"mat-raised-button>Checkout</button>
         </div>     
