Add Badge Icon with number of carts

--- a/frontend/src/app/cart/cart.component.css
+++ b/frontend/src/app/cart/cart.component.css
@@ -28,7 +28,13 @@ mat-card{
    width: 66%;
 }
 
+.cell{
+    width: 9rem;
+}
 
+.cell-padding{
+    padding-left: 10rem;
+}
 
 .full-width{
     width: 95%;
