--- a/frontend/src/app/product/product.component.html
+++ b/frontend/src/app/product/product.component.html
@@ -1,5 +1,7 @@
 
-
+<app-navbar
+   [numCartProducts]="this.cartProducts.length"
+></app-navbar>
 
 <div class="content">
     <div fxLayout="row wrap" fxLayoutGap="2rem grid">
