--- a/frontend/src/app/cart/cart.component.html
+++ b/frontend/src/app/cart/cart.component.html
@@ -1,63 +1,68 @@
+
+<app-navbar
+[numCartProducts]="this.cartProducts.length"
+></app-navbar>
+
 <div class="main-container" fxLayout="row">
       
-        <div class="cart-detail" fxLayoutGap="7rem">    
-            <mat-toolbar fxLayout="row" >
-                <h1 style="margin: 0 3rem;">Product</h1>
-                <h1 style="margin-left: 8rem;">Unit Price</h1>
-                <h1 style="margin-left: 9rem;">Quantity</h1>
-                <h1 style="margin-left: 9rem;">Total</h1>
-            </mat-toolbar>
-            <div class="flex-container" fxLayout="column" *ngFor="let product of cartProducts">
-                <mat-card class="flex-container" fxLayout="row" >
-                   <img class="img-card" src="{{ product.imageURL }}" >
-                   <h2 style="margin-left: 1rem;">{{ product.name }}</h2>
-                   <h2 style="margin: 0 9rem">{{ product.unitPrice }}</h2>
-                   <button (click)="onMinusQuantity(product)" mat-button-raised class="card-btn"><mat-icon>remove</mat-icon></button>
-                   <h2 style="margin: 0 1rem;">{{ product.quantity }}</h2>
-                   <button (click)="onAddQuantity(product)"  mat-button-raised class="card-btn"><mat-icon>add</mat-icon></button>
+    <div class="cart-detail" fxLayoutGap="7rem">    
+        <mat-toolbar fxLayout="row" >
+            <h1 style="margin: 0 3rem;">Product</h1>
+            <h1 style="margin-left: 8rem;">Unit Price</h1>
+            <h1 style="margin-left: 9rem;">Quantity</h1>
+            <h1 style="margin-left: 9rem;">Total</h1>
+        </mat-toolbar>
+        <div class="flex-container" fxLayout="column" *ngFor="let product of cartProducts">
+            <mat-card class="flex-container" fxLayout="row" >
+               <img class="img-card" src="{{ product.imageURL }}" >
+               <h2 style="margin-left: 1rem;">{{ product.name }}</h2>
+               <h2 style="margin: 0 9rem">{{ product.unitPrice }}</h2>
+               <button (click)="onMinusQuantity(product)" mat-button-raised class="card-btn"><mat-icon>remove</mat-icon></button>
+               <h2 style="margin: 0 1rem;">{{ product.quantity }}</h2>
+               <button (click)="onAddQuantity(product)"  mat-button-raised class="card-btn"><mat-icon>add</mat-icon></button>
 
 
-                   <h2 style="margin-left: 8rem;  margin-right: 3rem;">{{ product.totalPrice }}</h2>
-                   <button (click)="onProductDelete(product)"  mat-button  class="card-btn"><mat-icon  class="delete-icon">delete</mat-icon></button>
-                </mat-card>       
-            </div>
-        </div>  
+               <h2 style="margin-left: 8rem;  margin-right: 3rem;">{{ product.totalPrice }}</h2>
+               <button (click)="onProductDelete(product)"  mat-button  class="card-btn"><mat-icon  class="delete-icon">delete</mat-icon></button>
+            </mat-card>       
+        </div>
+    </div>  
 
+    
+
+    <div class="payment-detail"> 
+        <div class="card-logo">
+          <img id="credit-card" src="https://banner2.cleanpng.com/20180824/hhu/kisspng-logo-brand-payment-image-product-design-cufflins-the-sultans-of-swag-5b7fa2a54e5f22.728151171535091365321.jpg" alt="cards" >
+          <mat-divider></mat-divider>
+        </div>
+        
+        
+        <div class="form-container">
+            <h2 style="margin-top: 1rem;">Card Name:</h2>
+            <mat-form-field class="example-full-width" appearance="fill"  class="full-width">
+                <mat-label>Card Name</mat-label>
+                <input type="text" matInput > 
+            </mat-form-field>    
+            <mat-divider></mat-divider>
+        </div> 
+       
+
+       
+        <div class="form-container">
+            <h2 style="margin-top: 1rem;">Card Number:</h2>
+            <mat-form-field  appearance="fill" class="full-width">
+                <mat-label>Card Number</mat-label>
+                <input type="text" matInput > 
+            </mat-form-field>  
+            <mat-divider></mat-divider>  
+        </div> 
         
 
-        <div class="payment-detail"> 
-            <div class="card-logo">
-              <img id="credit-card" src="https://banner2.cleanpng.com/20180824/hhu/kisspng-logo-brand-payment-image-product-design-cufflins-the-sultans-of-swag-5b7fa2a54e5f22.728151171535091365321.jpg" alt="cards" >
-              <mat-divider></mat-divider>
-            </div>
-            
-            
-            <div class="form-container">
-                <h2 style="margin-top: 1rem;">Card Name:</h2>
-                <mat-form-field class="example-full-width" appearance="fill"  class="full-width">
-                    <mat-label>Card Name</mat-label>
-                    <input type="text" matInput > 
-                </mat-form-field>    
-                <mat-divider></mat-divider>
-            </div> 
-           
-
-           
-            <div class="form-container">
-                <h2 style="margin-top: 1rem;">Card Number:</h2>
-                <mat-form-field  appearance="fill" class="full-width">
-                    <mat-label>Card Number</mat-label>
-                    <input type="text" matInput > 
-                </mat-form-field>  
-                <mat-divider></mat-divider>  
-            </div> 
-            
-
-            
-            <div style="margin-top: 1rem;" fxLayout="row"><h3 >Subtotal:</h3><h2 class="costVal">{{payment.subtotal}}</h2></div>
-            <div fxLayout="row"><h3>Shipping:</h3> <h2  class="costVal">{{payment.shipping}}</h2></div>
-            <div fxLayout="row"><h3>Total (including Tax):</h3> <h2  class="costVal">{{payment.total}}</h2></div>
-            <mat-divider></mat-divider>
-            <button style="margin-left: 11rem;"mat-raised-button>Checkout</button>
-        </div>     
+        
+        <div style="margin-top: 1rem;" fxLayout="row"><h3 >Subtotal:</h3><h2 class="costVal">{{payment.subtotal}}</h2></div>
+        <div fxLayout="row"><h3>Shipping:</h3> <h2  class="costVal">{{payment.shipping}}</h2></div>
+        <div fxLayout="row"><h3>Total (including Tax):</h3> <h2  class="costVal">{{payment.total}}</h2></div>
+        <mat-divider></mat-divider>
+        <button style="margin-left: 11rem;"mat-raised-button>Checkout</button>
+    </div>     
 </div>
