--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -6,13 +6,13 @@
             <mat-icon>home</mat-icon>
         </button>
         
-        <button (click)="onCartNavigator()"mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+        
+        <button (click)="onCartNavigator()" mat-icon-button matBadge="{{numCartProducts}}"  matBadgeOverlap="true" matBadgeColor="warn" class="cart-icon" aria-label="Example icon-button with share icon">
             <mat-icon>shopping_cart</mat-icon>
         </button>    
 
         
 
-        <span>About</span>
-        <span>Services</span>
+       
     </div>
 </mat-toolbar>
