Fix: Page Reloading on the event of productlist page

--- a/frontend/src/app/cart/cart.component.html
+++ b/frontend/src/app/cart/cart.component.html
@@ -59,7 +59,9 @@
         
 
         
-        <div style="margin-top: 1rem;" fxLayout="row"><h3 >Subtotal:</h3><h2 class="costVal">{{payment.subtotal}}</h2></div>
+        <div style="margin-top: 1rem;" fxLayout="row"><h3>Subtotal:</h3>
+            <h2 class="costVal">{{payment.subtotal}}</h2>
+        </div>
         <div fxLayout="row"><h3>Shipping:</h3> <h2  class="costVal">{{payment.shipping}}</h2></div>
         <div fxLayout="row"><h3>Total (including Tax):</h3> <h2  class="costVal">{{payment.total}}</h2></div>
         <mat-divider></mat-divider>
