--- a/frontend/src/app/product/product.component.html
+++ b/frontend/src/app/product/product.component.html
@@ -1,6 +1,6 @@
 
 <app-navbar
-   [numCartProducts]="this.cartProducts.length"
+   [numCartProducts]="cartProducts.length"
 ></app-navbar>
 
 <div class="content">
