--- a/frontend/src/app/admin/admin-header/admin-header.component.html
+++ b/frontend/src/app/admin/admin-header/admin-header.component.html
@@ -13,7 +13,7 @@
                 <a class="nav-link" href="javascript:void(0);"><i class="far fa-address-book"></i>Address Book</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="javascript:void(0);"><i class="far fa-clone"></i>Components</a>
+                <a class="nav-link" href="javascript:void(0);"><i class="far fa-clone"></i>Products</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="javascript:void(0);"><i class="far fa-calendar-alt"></i>Calendar</a>
