--- a/frontend/src/app/auth/login/login.component.html
+++ b/frontend/src/app/auth/login/login.component.html
@@ -3,13 +3,14 @@
       <mat-card-header>
          <h2>Login</h2>
       </mat-card-header>
-      <form class="example-form">
+
+      <form class="example-form" (ngSubmit)="onSubmit()">
         <mat-card-content>
           <mat-form-field class="example-full-width">
-            <input matInput placeholder="Username">
+            <input matInput placeholder="Username" name="name" [(ngModel)]="user.username">
           </mat-form-field>
           <mat-form-field class="example-full-width">
-            <input matInput placeholder="Password">
+            <input matInput placeholder="Password" name="password" [(ngModel)]="user.password">
           </mat-form-field>
         </mat-card-content>
         <button mat-stroked-button color="primary" class="btn-block">Log in</button>
