Display product list in admin dashboard

--- a/frontend/src/app/admin/admin-dashboard/admin-dashboard.component.html
+++ b/frontend/src/app/admin/admin-dashboard/admin-dashboard.component.html
@@ -1,5 +1,5 @@
 <app-admin-header></app-admin-header>
 
-<h2> Welcome to Admin Dashboard </h2>
+<router-outlet></router-outlet>
 
 <app-admin-footer></app-admin-footer>
