--- a/frontend/src/app/admin/admin-products/admin-products.component.html
+++ b/frontend/src/app/admin/admin-products/admin-products.component.html
@@ -13,14 +13,14 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 </head>
 
-<div class="container-lg main-container" style="margin-top: 2rem;">
+<div style="margin-top: 2rem; width: 100%;">
     <div class="table-responsive">
         <div class="table-wrapper">
             <div class="table-title">
                 <div class="row">
-                    <div  class="col-sm-8"><h2> Product List</h2></div>
-                    <div class="col-sm-4">
-                        <button   type="button" class="btn btn-info add-new"><i class="fa fa-plus"></i> Add New</button>
+                    <div  class="col-lg-8"><h2> Product List</h2></div>
+                    <div class="col-lg-4">
+                        <button (click)="onAdd()"  type="button" class="btn btn-info add-new"><i class="fa fa-plus"></i> Add New</button>
                     </div>
                 </div>
             </div>
@@ -32,7 +32,9 @@
                         <th> Catagory</th>   
                         <th>Unit-price</th>
                         <th> Quantity </th>    
+                        <th>Image </th>
                         <th>Actions</th>
+
                     </tr>
                 </thead>
                 <tbody *ngFor="let pr of products">
@@ -42,10 +44,11 @@
                         <td>{{ pr.catagory }}</td>
                         <td>{{ pr.unitPrice }}</td>
                         <td>{{ pr.quantity }}</td>
+                        <td> <img style="width:4.7rem; height: 2rem; "src="{{ pr.imageURL }}" >   </td>
                         <td style="width: 300px;">
                            
                             <a class="edit clickable"  title="Edit" data-toggle="tooltip"><i class="material-icons">&#xE254;</i></a>
-                            <a class="delete clickable"  title="Delete" data-toggle="tooltip"><i class="material-icons">&#xE872;</i></a>
+                            <a class="delete clickable" (click)="onDelete(pr)" title="Delete" data-toggle="tooltip"><i class="material-icons">&#xE872;</i></a>
                           
                           
                         </td>
@@ -57,3 +60,4 @@
         </div>
     </div>    
 </div>  
+
