--- a/frontend/src/app/admin/admin-products/admin-products.component.html
+++ b/frontend/src/app/admin/admin-products/admin-products.component.html
@@ -47,7 +47,7 @@
                         <td> <img style="width:4.7rem; height: 2rem; "src="{{ pr.imageURL }}" >   </td>
                         <td style="width: 300px;">
                            
-                            <a class="edit clickable"  title="Edit" data-toggle="tooltip"><i class="material-icons">&#xE254;</i></a>
+                            <a class="edit clickable"  (click)="onEdit(pr)"   title="Edit" data-toggle="tooltip"><i class="material-icons">&#xE254;</i></a>
                             <a class="delete clickable" (click)="onDelete(pr)" title="Delete" data-toggle="tooltip"><i class="material-icons">&#xE872;</i></a>
                           
                           
