--- a/frontend/src/app/admin/admin-dashboard/admin-dashboard.component.html
+++ b/frontend/src/app/admin/admin-dashboard/admin-dashboard.component.html
@@ -1,5 +1,4 @@
-<app-admin-header></app-admin-header>
+<app-admin-navbar></app-admin-navbar>
 
-<router-outlet></router-outlet>
 
-<app-admin-footer></app-admin-footer>
+
