Refactor: Design of admin panel

--- a/frontend/src/app/admin/add-products/add-products.component.html
+++ b/frontend/src/app/admin/add-products/add-products.component.html
@@ -1,4 +1,4 @@
-
+<app-admin-navbar></app-admin-navbar>
 
 <div  class="container">  
     <form id="contact" action="" method="post" (ngSubmit)="onSubmit()" >
