--- a/frontend/src/app/admin/admin-dashboard/admin-dashboard.component.html
+++ b/frontend/src/app/admin/admin-dashboard/admin-dashboard.component.html
@@ -1,6 +1,18 @@
 <app-admin-navbar></app-admin-navbar>
 
-<app-admin-footer></app-admin-footer>
+
+    <h2 style="text-align: center; margin:5rem; font-size:300%; color:blueviolet;">Welcome to Admin Panel</h2>
+
+
+
+    
+
+
+   
+    
+
+  
+
 
 
 
