--- a/frontend/src/app/admin/admin-footer/admin-footer.component.html
+++ b/frontend/src/app/admin/admin-footer/admin-footer.component.html
@@ -1,135 +1,71 @@
-<!-- Footer -->
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-  </head>
-  <body>
+
    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+    
+    <footer class="footer-39201" id="main-containerr">
+      <div class="container">
+        <div class="row">
+          <div class="col-md mb-4 mb-md-0">
+            <h3>Store</h3>
+            <ul class="list-unstyled nav-links">
+              <li><a href="#">Men</a></li>
+              <li><a href="#">Women</a></li>
+              <li><a href="#">Children</a></li>
+              <li><a href="#">New Arrivals</a></li>
+              <li><a href="#">Top Brands</a></li>
+              <li><a href="#">Special Offers</a></li>
+            </ul>
+          </div>
+          <div class="col-md mb-4 mb-md-0">
+            <h3>About</h3>
+            <ul class="list-unstyled nav-links">
+              <li><a href="#">About us</a></li>
+              <li><a href="#">Clients</a></li>
+              <li><a href="#">Services</a></li>
+              <li><a href="#">Best sellers</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </div>
+          <div class="col-md mb-4 mb-md-0">
+            <h3>Legal</h3>
+            <ul class="list-unstyled nav-links">
+              <li><a href="#">Terms &amp; Conditions</a></li>
+              <li><a href="#">Privacy Policy</a></li>
+              <li><a href="#">Legality</a></li>
+              <li><a href="#">Author License</a></li>
+            </ul>
+          </div>
+          <div class="col-md-4 mb-4 mb-md-0">
+            <h3>Subscribe</h3>
+            <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque dolor ducimus doloremque earum ullam. Architecto voluptatum odio magni.</p>
+            <form action="#" class="subscribe">
+                <input type="text" class="form-control" placeholder="Enter your e-mail">
+                <input type="submit" class="btn btn-submit" value="Send">
+              </form>
+          </div>
+        </div>
 
-
-<footer class="text-center text-lg-start bg-light text-muted">
-	<!-- Section: Social media -->
-	<section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
-	  <!-- Left -->
-	  
-	  <!-- Left -->
-  
-	  <!-- Right -->
-	  <div>
-		<a href="" class="me-4 text-reset">
-		  <i class="fab fa-facebook-f"></i>
-		</a>
-		<a href="" class="me-4 text-reset">
-		  <i class="fab fa-twitter"></i>
-		</a>
-		<a href="" class="me-4 text-reset">
-		  <i class="fab fa-google"></i>
-		</a>
-		<a href="" class="me-4 text-reset">
-		  <i class="fab fa-instagram"></i>
-		</a>
-		<a href="" class="me-4 text-reset">
-		  <i class="fab fa-linkedin"></i>
-		</a>
-		<a href="" class="me-4 text-reset">
-		  <i class="fab fa-github"></i>
-		</a>
-	  </div>
-	  <!-- Right -->
-	</section>
-	<!-- Section: Social media -->
-  
-	<!-- Section: Links  -->
-	<section class="">
-	  <div class="container text-center text-md-start mt-5">
-		<!-- Grid row -->
-		<div class="row mt-3">
-		  <!-- Grid column -->
-		  <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-			<!-- Content -->
-			<h2 class="text-uppercase fw-bold mb-4">
-			  <i class="fas fa-gem me-3"></i>Company name
-			</h2>
-			<p>
-			   Erfan@brainstation-23
-			</p>
-		  </div>
-		  <!-- Grid column -->
-  
-		  <!-- Grid column -->
-		  <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-			<!-- Links -->
-			<h2 class="text-uppercase fw-bold mb-4">
-			  Products
-			</h2>
-			<p>
-			  <a href="#!" class="text-reset">Angular</a>
-			</p>
-			<p>
-			  <a href="#!" class="text-reset">React</a>
-			</p>
-			<p>
-			  <a href="#!" class="text-reset">Vue</a>
-			</p>
-			<p>
-			  <a href="#!" class="text-reset">Laravel</a>
-			</p>
-		  </div>
-		  <!-- Grid column -->
-  
-		  <!-- Grid column -->
-		  <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-			<!-- Links -->
-			<h2 class="text-uppercase fw-bold mb-4">
-			  Useful links
-			</h2>
-			<p>
-			  <a href="#!" class="text-reset">Pricing</a>
-			</p>
-			<p>
-			  <a href="#!" class="text-reset">Settings</a>
-			</p>
-			<p>
-			  <a href="#!" class="text-reset">Orders</a>
-			</p>
-			<p>
-			  <a href="#!" class="text-reset">Help</a>
-			</p>
-		  </div>
-		  <!-- Grid column -->
-  
-		  <!-- Grid column -->
-		  <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-			<!-- Links -->
-			<h2 class="text-uppercase fw-bold mb-4">Contact</h2>
-			<p><i class="fas fa-home me-3"></i> Mirpur</p>
-			<p>
-			  <i class="fas fa-envelope me-3"></i>
-			  info@example.com
-			</p>
-			<p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
-			<p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
-		  </div>
-		  <!-- Grid column -->
-		</div>
-		<!-- Grid row -->
-	  </div>
-	</section>
-	<!-- Section: Links  -->
-  
-	<!-- Copyright -->
-	<div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-	  © 2022 Copyright:
-	  <a class="text-reset fw-bold" href="https://mdbootstrap.com/">MDBootstrap.com</a>
-	</div>
-	<!-- Copyright -->
-  </footer>
-  <!-- Footer -->
-
-</body>
-</html>
+        <div class="row align-items-center">
+          <div class="col-12">
+            <div class="border-top my-5"></div>
+          </div>
+          <div class="col-md-6">
+            <p><small>&copy; 2019 All Rights Reserved.</small></p>
+          </div>
+          <div class="col-md-6 text-md-right">
+            <ul class="social list-unstyled">
+              <li><a href="#"><span class="icon-facebook"></span></a></li>
+              <li><a href="#"><span class="icon-twitter"></span></a></li>
+              <li><a href="#"><span class="icon-pinterest"></span></a></li>
+              <li><a href="#"><span class="icon-instagram"></span></a></li>
+              <li><a href="#"><span class="icon-behance"></span></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
+    
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
