--- a/frontend/src/app/admin/admin-navbar/admin-navbar.component.html
+++ b/frontend/src/app/admin/admin-navbar/admin-navbar.component.html
@@ -1,10 +1,10 @@
 <header class="header">
-    <h1 class="logo"><a href="#">Admin</a></h1>
+    <h2 class="text-uppercase fw-bold mb-2" style="margin-left: 0.5rem; margin-top:0.5rem; margin-bottom:0.1rem;">Admin Panel</h2>
   <ul class="main-nav">
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Products</a></li>
-      <li><a href="#">Orders</a></li>
-      <li><a href="#"></a></li>
+      <li><a [routerLink]="['/admin/']">Home</a></li>
+      <li><a  [routerLink]="['/admin/products']">Products</a></li>
+      <li><a  [routerLink]="['/admin/orders']">Orders</a></li>
+      <li><a  [routerLink]="['/admin/']"></a></li>
      
   </ul>
 </header> 
