--- a/frontend/src/app/admin/admin-products/admin-products.component.html
+++ b/frontend/src/app/admin/admin-products/admin-products.component.html
@@ -1,3 +1,4 @@
+<app-admin-navbar></app-admin-navbar>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -60,4 +61,5 @@
         </div>
     </div>    
 </div>  
+<app-admin-footer></app-admin-footer>
 
