--- a/frontend/src/app/admin/edit-product/edit-product.component.html
+++ b/frontend/src/app/admin/edit-product/edit-product.component.html
@@ -1,5 +1,5 @@
 
-
+<app-admin-navbar></app-admin-navbar>
 <div  class="container">  
     <form id="contact" action="" method="post" (ngSubmit)="onSubmit()" >
       <h2 style="margin-left: 27%;">Edit a New Product:</h2>
