--- a/frontend/src/app/admin/order/order.component.html
+++ b/frontend/src/app/admin/order/order.component.html
@@ -1,3 +1,4 @@
+<app-admin-navbar></app-admin-navbar>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -54,3 +55,4 @@
 </div>  
 
 
+<app-admin-footer></app-admin-footer>
